objects/Challenge_Team__c.object
<CustomObject>
    <description>Maintains teams and their members for individual challenges.</description>
    <fields>
        <fullName>Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The challenge the team is assigned to.</description>
        <inlineHelpText>The challenge the team is assigned to.</inlineHelpText>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Challenge_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <description>The number of members on the team.</description>
        <label>Members</label>
        <summaryForeignKey>Challenge_Team_Member__c.Challenge_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Challenge Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenge Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>